--- a/webRoot/index.html
+++ b/webRoot/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="./static/commonCss/iconfont/iconfont.css">
-    <title>uip</title>
-  </head>
-  <style>
-    html,body{
-      height: 100%;
-      overflow: hidden;
-    }
-  </style>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="stylesheet" href="./static/commonCss/common.css">
+  <link rel="stylesheet" href="./static/commonCss/base.css">
+  <link rel="stylesheet" href="./static/commonCss/iconfont/iconfont.css">
+  <title>uip</title>
+</head>
+<style>
+  html,
+  body {
+    height: 100%;
+  }
+</style>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+<link rel="stylesheet" href="./static/commonCss/iconfont/iconfont.js">
 </html>
